--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -28,7 +28,7 @@
     <button class="hero__btn" id="startBtn">COMENZAR</button>
     <footer class="hero__footer">
       <span>Invite ME! &copy;2025</span>
-      <span class="footer__brand">ADALAB</span>
+      <span class="footer__brand">Invite ME!</span>
     </footer>
   </section>
      </div>
