--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -1,52 +1,54 @@
 /* ------------------------------
    FORMULARIO (MOBILE FIRST)
 ------------------------------ */
+@use "../core/variables" as vars;
 
 .form {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  max-width: 90%;
-  margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    max-width: 90%;
+    margin: 0 auto;
+    font-family: vars.$font-main;
 }
 
 .form__group {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .form__label {
-  font-weight: 600;
-  margin-bottom: 4.8px;
-  font-size: 14px;
-  font-weight: 500;
-  text-align: left;
+    font-weight: 600;
+    margin-bottom: 4.8px;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: left;
 }
 
 .form__input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 100%;
 }
 
 .form__button {
-  background-color: #0077ff;
-  color: #fff;
-  padding: 8px 20px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-  width: fit-content;
-  align-self: center;
+    background-color: #0077ff;
+    color: #fff;
+    padding: 8px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+    width: fit-content;
+    align-self: center;
 }
 
 .form__button:hover {
-  background-color: #005fcc;
+    background-color: #005fcc;
 }
 
 /* ------------------------------
@@ -60,7 +62,7 @@
     margin: 0 auto;
   }
 
-.form__label {
+  .form__label {
     font-size: 16px;
   }
 }
@@ -73,7 +75,7 @@
     margin: 0 auto;
   }
 
-.form__label {
+  .form__label {
     font-size: 17.6px;
   }
 }
