--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,12 +1,15 @@
-<div class="preview-container">
-    <form action="">
+<div class="preview">
+    <form class="preview-form">
         <select class="preview__chosen-style">
+            <option value="" disabled selected>Elige un diseño</option>
             <option value="autum">Otoño</option>
             <option value="fun">Desenfadado</option>
             <option value="minimal">Minimalista</option>
         </select>
     </form>
+    <div class="preview-container">
     <p class="preview__host-name"></p>
     <p class="preview__event-date"></p>
     <p class="preview__message"></p>
+    </div>
 </div>
