--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -8,8 +8,15 @@
         </select>
     </form>
     <div class="preview-container">
-    <p class="preview__host-name"></p>
-    <p class="preview__event-date"></p>
-    <p class="preview__message"></p>
+        <div class="preview__main">
+            <p class="preview-main__host-name"></p>
+            <p class="preview-main__message"></p>
+        </div>
+        <div class="preview__data">
+            <p class="preview__event-date"></p>
+            <p class="preview__mail"></p>
+            <p class="preview__phone"></p>
+            <p class="preview__address"></p>
+        </div>
     </div>
 </div>
