--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -38,3 +38,15 @@
     background-position: center;
     height: 300px;
 }
+
+.preview__main {
+    display: flex;
+    flex-direction: column;
+    font-size: 24px;
+}
+
+.preview__data {
+    display: flex;
+    flex-direction: column;
+    font-size: 11px;
+}
