boder radius preview

--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -11,6 +11,7 @@
 .preview-container {
     font-family: vars.$font-main;
     border: solid;
+    border-radius: 10px;
     background-color: #EDE2D5;
     height: 400px;
     width: 600px;
