--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,3 +1,4 @@
+<div class="preview">
     <div class="preview-container">
         <div class="preview__main">
             <p class="preview-main__host-name"></p>
