--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,7 @@
         <a href="https://www.linkedin.com/in/rosana-victoria-moya-minuesa-1246841b5/" target="_blank" title="LinkedIn Rosana">
           <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
         </a>
-        <a href="#" target="_blank" title="GitHub Rosana">
+        <a href="https://github.com/Rosana-Moya" target="_blank" title="GitHub Rosana">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" />
         </a>
       </div>
@@ -23,7 +23,7 @@
         <a href="#" target="_blank" title="LinkedIn Tania">
           <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
         </a>
-        <a href="#" target="_blank" title="GitHub Tania">
+        <a href="https://github.com/Tasac-sainz" target="_blank" title="GitHub Tania">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" />
         </a>
       </div>
@@ -35,7 +35,7 @@
         <a href="#" target="_blank" title="LinkedIn Karen">
           <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
         </a>
-        <a href="#" target="_blank" title="GitHub Karen">
+        <a href="https://github.com/Karengonsan" target="_blank" title="GitHub Karen">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" />
         </a>
       </div>
@@ -47,7 +47,7 @@
         <a href="#" target="_blank" title="LinkedIn Michelle">
           <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
         </a>
-        <a href="#" target="_blank" title="GitHub Michelle">
+        <a href="https://github.com/Michelle-1982" target="_blank" title="GitHub Michelle">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" />
         </a>
       </div>
