--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -6,7 +6,7 @@
       <!-- Grupo: Nombre -->
       <div class="form__group">
         <label for="name" class="form__label">Nombre</label>
-        <input type="text" id="name" class="form__input" placeholder="Destinatario" />
+        <input type="text" id="name" class="form__input" placeholder="¿Quién invita?" />
       </div>
       <!-- Grupo: Mensaje -->
       <div class="form__group">
