Se crea página "design" para el form y la preview y se modifican los load para que cada parcial se aplique en la página correspondiente. Se añade enlace al botón "comenzar" de la home y modifca el estilo de los <a> para que sean blancos y sin decoración. Todo en  rama MAIN

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -22,7 +22,7 @@
         <span>Comparte</span>
       </div>
     </div>
-    <button class="hero__btn" id="startBtn">COMENZAR</button>
+    <button class="hero__btn" id="startBtn"><a href="../design.html">COMENZAR</a></button>
   
   </section>
      </div>
