--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -12,9 +12,9 @@
     font-family: vars.$font-main;
     border: solid;
     border-radius: 10px;
-    background-color: #EDE2D5;
+    background-color: #f7f7ef;
     height: 400px;
-    width: 600px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
