--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -7,29 +7,30 @@
     align-items: center;
     gap: 40px;
     margin: 30px;
-}
-.preview-container {
     font-family: vars.$font-main;
     border: solid;
     border-radius: 10px;
     background-color: #f7f7ef;
     height: 400px;
     width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-weight: 900;
-}
+    position: relative;
+    margin: 50px auto 50px;
+    background-size: cover;
+    background-position: center;
+    }
 
 .preview__main {
     display: flex;
     flex-direction: column;
     font-size: 24px;
+    text-align: center;
+    padding: 0 20px 0 20px;
 }
 
 .preview__data {
     display: flex;
     flex-direction: column;
     font-size: 11px;
+    justify-content: flex-end;
 }
