--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,12 +1,14 @@
-<div class="preview">
-    <div class="preview__main">
-        <p class="preview-main__host-name"></p>
-        <p class="preview-main__message"></p>
+<section class="preview-section">
+    <div class="preview">
+        <div class="preview__main">
+            <p class="preview-main__host-name"></p>
+            <p class="preview-main__message"></p>
+        </div>
+        <div class="preview__data">
+            <p class="preview__event-date"></p>
+            <p class="preview__mail"></p>
+            <p class="preview__phone"></p>
+            <p class="preview__address"></p>
+        </div>
     </div>
-    <div class="preview__data">
-        <p class="preview__event-date"></p>
-        <p class="preview__mail"></p>
-        <p class="preview__phone"></p>
-        <p class="preview__address"></p>
-    </div>
-</div>
+</section>
