--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     gap: 40px;
-    margin: 30px;
+    // margin: 30px;
     font-family: vars.$font-main;
     border: solid;
     border-radius: 10px;
@@ -15,7 +15,7 @@
     width: 50%;
     font-weight: 900;
     position: relative;
-    margin: 50px auto 50px;
+    // margin: 50px auto 50px;
     background-size: cover;
     background-position: center;
     }
