--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 @use '../core/variables' as vars;
 
 .footer {
-  background-color: #f8f8f8;
+  background-color: #f5dccb;
   padding: 20px;
   font-size: 14px;
   color: #333;
@@ -9,13 +9,13 @@
 }
 
 .footer__top {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 .footer__brand {
   display: block;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 25px;
   margin-bottom: 4px;
 }
 
@@ -34,7 +34,7 @@
 
 .team-member span {
   font-weight: bold;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .social-icons {
@@ -62,5 +62,10 @@
   .team-member {
     align-items: center;
   }
+
+  .team-member span {
+  font-weight: bold;
+  font-size: 25px;
+}
 }
 
