--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -1,5 +1,8 @@
 @use '../core/variables' as vars;
-
+.preview-section {
+    display: flex;
+    justify-content: center;
+}
 .preview {
     display: flex;
     flex-direction: column;
