recolocación botón reset

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -102,6 +102,7 @@
         class="js-font-color"
       />
     </div>
+    <button class="share__button js-reset">Resetear</button>
   </div>
 </section>
 
