recolocación botones resetea y crea

--- a/src/partials/create-button.html
+++ b/src/partials/create-button.html
@@ -1,6 +1,4 @@
-<section class="collapsible">
-  <button class="collapsible__header">Comparte</button>
-  <div class="collapsible__content share">
+  <div class="content__share">
     <button type="submit" class="share__button js-create">Crear tarjeta</button>
   </div>
-</section>
+
