--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -102,8 +102,10 @@
         class="js-font-color"
       />
     </div>
+    <div class="content__share">
     <button class="share__button js-reset">Resetear</button>
-  </div>
+    </div>
+</div>
 </section>
 
 <!-- Sección: Comparte -->
