cambio de input a textarea

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -11,7 +11,7 @@
       <!-- Grupo: Mensaje -->
       <div class="form__group">
         <label for="message" class="form__label">Mensaje</label>
-        <input type="text" id="message" class="form__input" placeholder="Te invito a..." />
+        <textarea id="message" class="form__input" maxlength="200" placeholder="Te invito a..."></textarea>
       </div>
 
       <!-- Grupo: Email -->
