--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -98,8 +98,8 @@ input[type="color"] {
 
 .collapsible__header {
   width: 100%;
- background: linear-gradient(135deg, #e0f7fa 0%, #e0e76cb6 100%);
- color: #2A7C7C;
+  background: linear-gradient(135deg, #e0f7fa 0%, #e0e76cb6 100%);
+  color: #2a7c7c;
   border: none;
   padding: 12px;
   text-align: center;
