--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -3,7 +3,6 @@
 .preview-section {
     display: flex;
     justify-content: center;
-    margin: 4px 0 40px 0;
 }
 .preview {
     display: flex;
@@ -17,6 +16,7 @@
     background-color: #f7f7ef;
     height: 400px;
     width: 50%;
+    gap: 40px;
     font-weight: 900;
     position: relative;
     background-size: cover;
@@ -28,12 +28,15 @@
     flex-direction: column;
     font-size: 24px;
     text-align: center;
-    padding: 0 90px 0 90px;
+    padding: 50px 150px 0 150px;
+    gap: 20px;
 }
 
 .preview__data {
     display: flex;
     flex-direction: column;
-    font-size: 11px;
+    font-size: 10px;
     justify-content: flex-end;
+    padding: 0 180px 0 180px;
+    text-align: center;
 }
