--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -56,6 +56,7 @@ input[type="color"] {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 30px;
 }
 // .js-create {
 //   display: block;
