--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -41,7 +41,7 @@
       <!-- Grupo: Foto -->
       <div class="form__group">
         <label for="photo" class="form__label">Foto</label>
-        <input type="file" id="photo" class="form__input" accept="image/*" placeholder="Añade una imagen" />
+        <input type="file" id="photo" class="form__input js_input_file" accept="image/*" placeholder="Añade una imagen" />
       </div>
     </form>
   </div>
