--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,5 +1,8 @@
 <section class="preview-section">
     <div class="preview">
+        <div class="photo-up">
+             <img src="" alt="Foto del anfitrión" class="photo-up__image" style="display: none;">
+        </div>
         <div class="preview__main">
             <p class="preview-main__host-name"></p>
             <p class="preview-main__message"></p>
