--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,6 +1,6 @@
 <!-- Sección: Rellena -->
 <section class="collapsible">
-  <button class="collapsible__header">Rellena</button>
+  <button class="collapsible__header">Rellena <i class="fi fi-sr-angle-down"></i></button>
   <div class="collapsible__content">
     <form class="form">
       <!-- Grupo: Nombre -->
@@ -41,7 +41,7 @@
       <!-- Grupo: Foto -->
       <div class="form__group">
         <label for="photo" class="form__label">Foto</label>
-        <input type="file" id="photo" class="form__input js_input_file" accept="image/*" placeholder="Añade una imagen" />
+        <input type="file" id="photo" class="form__input" accept="image/*" placeholder="Añade una imagen" />
       </div>
     </form>
   </div>
@@ -49,7 +49,7 @@
 
 <!-- Sección: Diseña -->
 <section class="collapsible">
-  <button class="collapsible__header">Diseña</button>
+  <button class="collapsible__header">Diseña <i class="fi fi-sr-angle-down"></i></button>
   <div class="collapsible__content design">
     <!-- Estilo -->
     <div class="design__group">
