--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -110,13 +110,35 @@ input[type="color"] {
   cursor: pointer;
 }
 
-.collapsible__content {
-  margin-top: 12px;
-  display: none; /* Oculto por defecto */
+.collapsible__header i {
+  font-size: 18px;
+  color: #2a7c7c;
+  margin-left: 8px;
+  transition: transform 0.3s ease;
+  display: inline-block;
+  transform: rotate(0deg)
 }
 
-.collapsible__content.active {
-  display: block;
+.collapsible__header i.rotated {
+    transform: rotate(180deg);
+}
+
+.collapsible__header.active i {
+  transform: rotate(180deg);
+  display: inline-block;
+}
+
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease, padding 0.3s ease;
+  margin-top: 12px;
+  padding: 0 16px;
+}
+
+.collapsible__content.open {
+  max-height: 500px;
+  padding: 16px;
 }
 
 /* ------------------------------
