--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -6,10 +6,15 @@
 }
 
 .photo-up{
-width: 20px;
-height: auto;
-border-radius: 5px;
-background-color: red;
+width: 100px;
+height: 100px;
+position: absolute;
+  top: 3px;
+  left:3px;
+border-radius: 5%;
+background-color:red;
+flex : 1;
+
 }
 
 .preview {
