--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -36,7 +36,7 @@ background-color: red;
     flex-direction: column;
     font-size: 18px;
     text-align: center;
-    padding: 50px 200px 0 200px;
+    padding: 10% 20% 0 20%;
     gap: 20px;
 }
 
