--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -12,9 +12,17 @@ position: absolute;
   top: 3px;
   left:3px;
 border-radius: 5%;
-background-color:red;
+background-color:rgb(238, 231, 231);
 flex : 1;
 
+}
+
+.photo-up__image {
+  display: none; /* Se mostrará con JS */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5%;
 }
 
 .preview {
