--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -11,10 +11,8 @@
             <p class="preview__phone"></p>
             <p class="preview__address"></p>
         </div>
-        <div class="photo-up">
-        <img src="" alt="Foto del anfitrión" class="photo-up__image" style="display: none;">
-    </div>
-
+        <div class="photo-up"></div>
+    
     </div>
     
 </section>
