--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,7 +4,7 @@
     <p class="hero__desc">Crea mejores conexiones de forma fácil y cómoda</p>
     <div class="hero__steps">
       <div class="step">
-        <img src="https://cdn-icons-png.flaticon.com/512/747/747376.png" alt="icono rellenar" width="32" height="32"/>
+        <img src="./images/icons8-rellenar-el-formulario-100.png" alt="icono rellenar" width="32" height="32"/>
         <span>Rellena</span>
       </div>
       <div class="step">
@@ -12,8 +12,9 @@
         <span>Diseña</span>
       </div>
       <div class="step">
-        <img src="https://cdn-icons-png.flaticon.com/512/929/929564.png" alt="icono compartir" width="32" height="32"/>
-        <span>Comparte</span>
+        <i class= "fi" fi-br-download></i>
+        <img src="./images/cloud-arrow-down-solid-full.svg" alt="icono descarga" />
+        <span>Descarga</span>
       </div>
     </div>
     <button class="hero__btn" id="startBtn"><a href="../design.html">COMENZAR</a></button>
