corregir codigo iconos

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,16 +4,16 @@
     <p class="hero__desc">Crea mejores conexiones de forma fácil y cómoda</p>
     <div class="hero__steps">
       <div class="step">
-        <img src="./images/icons8-rellenar-el-formulario-100.png" alt="icono rellenar" width="32" height="32"/>
+        <img src="./images/icons8-rellenar-el-formulario-100.png" alt="icono rellenar"/>
         <span>Rellena</span>
       </div>
       <div class="step">
-        <img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png" alt="icono diseñar" width="32" height="32"/>
+        <img src="./images/Diseña.png" alt="icono diseñar"/>
         <span>Diseña</span>
       </div>
       <div class="step">
         <i class= "fi" fi-br-download></i>
-        <img src="./images/cloud-arrow-down-solid-full.svg" alt="icono descarga" />
+        <img src="./images/cloud-arrow-down-solid-full.svg" alt="icono descarga"/>
         <span>Descarga</span>
       </div>
     </div>
